[gd_scene load_steps=9 format=3 uid="uid://45h3dhejornk"]

[ext_resource type="Script" path="res://scripts/inventory/leaf.gd" id="1_8odjb"]
[ext_resource type="Texture2D" uid="uid://b4kti6qtg43ir" path="res://sprites/items/item_spawnables/leaf.png" id="2_ejhxu"]
[ext_resource type="Texture2D" uid="uid://cdolxtnfa8hal" path="res://sprites/misc/shadow.png" id="2_t6mpp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k8r5i"]
size = Vector2(6, 6)

[sub_resource type="Animation" id="Animation_l2nqm"]
resource_name = "leaf_move"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("main_body/main_body_2/main_body_3:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8, 1.4, 2),
"transitions": PackedFloat32Array(-2, -2, -2, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(70, 0), Vector2(50, 0), Vector2(60, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("main_body/main_body_2/main_body_3/Leaf:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8, 1.1, 1.4, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.45, 1.5), Vector2(1, 1), Vector2(0.36, 1.2), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("main_body/main_body_2/main_body_3:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2.5, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_bf7av"]
resource_name = "leaf_spin"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("main_body/main_body_2/main_body_3:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(40, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"leaf_spin_2"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("main_body:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="Animation" id="Animation_7adib"]
resource_name = "leaf_spin_2"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("main_body/main_body_2/main_body_3:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1.5, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("main_body:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 12.5664]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i8777"]
_data = {
"leaf_move": SubResource("Animation_l2nqm"),
"leaf_spin": SubResource("Animation_bf7av"),
"leaf_spin_2": SubResource("Animation_7adib")
}

[node name="leaf" type="Node2D"]
texture_filter = 1
script = ExtResource("1_8odjb")

[node name="main_body" type="Node2D" parent="."]

[node name="main_body_2" type="Node2D" parent="main_body"]
rotation = 6.28319

[node name="main_body_3" type="Node2D" parent="main_body/main_body_2"]

[node name="Area2D" type="Area2D" parent="main_body/main_body_2/main_body_3"]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="main_body/main_body_2/main_body_3/Area2D"]
shape = SubResource("RectangleShape2D_k8r5i")

[node name="Shadow" type="Sprite2D" parent="main_body/main_body_2/main_body_3"]
modulate = Color(1, 1, 1, 0.466667)
scale = Vector2(0.15, 0.15)
texture = ExtResource("2_t6mpp")

[node name="Leaf" type="Sprite2D" parent="main_body/main_body_2/main_body_3"]
texture = ExtResource("2_ejhxu")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_i8777")
}

[connection signal="body_entered" from="main_body/main_body_2/main_body_3/Area2D" to="." method="_on_area_2d_body_entered"]
